libs/wingc/src/snapshots/valid_forward_decl.snap
---
source: libs/wingc/src/lib.rs
description: "../../examples/tests/valid/forward_decl.w"
---
// ../../examples/tests/valid/forward_decl.w.out/preflight.js
const $stdlib = require('@winglang/wingsdk');
const $outdir = process.env.WINGSDK_SYNTH_DIR ?? ".";

function __app(target) {
	switch (target) {
		case "sim":
			return $stdlib.sim.App;
		case "tfaws":
		case "tf-aws":
			return $stdlib.tfaws.App;
		default:
			throw new Error(`Unknown WING_TARGET value: "${process.env.WING_TARGET ?? ""}"`);
	}
}
const $App = __app(process.env.WING_TARGET);

class MyApp extends $App {
constructor() {
  super({ outdir: $outdir });
  
  class R
  {
  constructor() {
  }
  f;
  method2() {
    this.method1();
    console.log(`${this.f}`);
    this.method2();
  }
  method1() {
  }
  }
  let x = "hi";
  if (true) {
    console.log(`${x}`);
    let y = new R(this,"R");
  }
}
}
new MyApp().synth();

