libs/wingc/src/snapshots/valid_statements_variable_declarations.snap
---
source: libs/wingc/src/lib.rs
description: "../../examples/tests/valid/statements_variable_declarations.w"
---
// ../../examples/tests/valid/statements_variable_declarations.w.out/preflight.js
const $stdlib = require('@winglang/wingsdk');
const $outdir = process.env.WINGSDK_SYNTH_DIR ?? ".";

function __app(target) {
	switch (target) {
		case "sim":
			return $stdlib.sim.App;
		case "tfaws":
		case "tf-aws":
			return $stdlib.tfaws.App;
		default:
			throw new Error(`Unknown WING_TARGET value: "${process.env.WING_TARGET ?? ""}"`);
	}
}
const $App = __app(process.env.WING_TARGET);

class MyApp extends $App {
constructor() {
  super({ outdir: $outdir, name: "statements_variable_declarations" });
  
  let x = 2;
  let y = x;
}
}
new MyApp().synth();

